# kco

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  build.sh  crd.yaml  dummy-pod.yaml  pyproject.toml  test-targetapp-slack.yaml  test-targetapp.yaml
.github/workflows/: ci-cd.yml  release.yml  test-build.yml
charts/kco-operator/: Chart.yaml  values.yaml
charts/kco-operator/templates/: _helpers.tpl  crd.yaml  deployment.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: github-container-registry.md
examples/: advanced-targetapp.yaml  basic-targetapp.yaml  command-execution.yaml  webhook-integration.yaml
kca/: README.md
kca/src/targetWorkload/: README.md  crd.yaml  requirements.txt  targetWorkloadOperator.py
kca/src/targetWorkload/examples/: basic-target.yaml
kca/src/targetWorkload/templates/: configmap.yaml
kco_operator/: __init__.py  main.py
kco_operator/actions/: __init__.py  base.py  registry.py
kco_operator/actions/builtin/: __init__.py  exec_command.py  patch_resource.py  restart_pod.py  scale_deployment.py  webhook.py
kco_operator/config/: __init__.py  settings.py
kco_operator/events/: __init__.py  generator.py
kco_operator/monitors/: __init__.py  controller.py  graphql.py  state.py
kco_operator/utils/: __init__.py  health.py  k8s.py  logging.py  rate_limiter.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_monitoring_workflow.py
tests/unit/: __init__.py  test_config.py  test_state_manager.py
